    nicht, wird automatisch unkomprimiert kommuniziert. Das Verfahren ist
    kompatibel mit dem Original-ircd 2.10.3, d.h. beide Server koennen
    miteinander ueber komprimiert Links kommunizieren.
  - Handling der Schreibpuffer umgestellt: Server sollte schneller arbeiten.
  - SQUIT wird nicht mehr doppelt an andere Server weitergeleitet.

ngIRCd 0.5.4, 24.11.2002

  - Fehler-Handling von connect() gefixed: der Server kann sich nun auch   
    unter A/UX wieder zu anderen verbinden.
  - in den Konfigurationsvariablen ServerUID und ServerGID kann nun nicht
    nur die numerische ID, sondern auch der Name des Users bzw. der Gruppe
    verwendet werden. Beim Start des Daemons wird nun beides angezeigt.
  - Besseres Logging von Prefix-Fehlern.
  - angenommene Sockets werden nun korrekt auf "non-blocking" konfiguriert,
    beim Senden und Empfangen werden Blockierungen besser abgefangen.
  - RPL_UMODEIS hat Code 221, nicht 211 ... *argl*
  - select() in Try_Write() hat falschen (keinen!) Timeout verwendet;
    die "Zeit-Aufloesung" des Servers sind zudem nun 2 Sekunden (TIME_RES).
    Insgesamt sollte die Reaktionszeit des Server nun besser sein.

ngIRCd 0.5.3, 08.11.2002

  - NOTICE liefert nun wirklich nie mehr einen Fehler, auch dann nicht,
    wenn der sendende Client noch gar nicht registriert ist.
  - ein "schneller Server-Reconnect" wird nur noch dann versucht, wenn die
    Verbindung zuvor ordentlich (="lange genug") in Ordnung war; somit also
    nicht meht, wenn der Peer-Server gleich beim Connect ein ERROR liefert.
    Das vermeidet "Connect-Orgien".
  - einige Datentypen aufgeraumt: z.B. sind viele INT32s nun LONGs. Das ist
    auf Platformen mit 8-Byte-Integern kompatibler.
  - RPL_YOURHOST_MSG ist nun ircII- und RFC-kompatibel ;-)
  - Segfault unter hoher Netzaktivitaet behoben: in Conn_Close() wird die
    Connection-Struktur nun frueher als "ungueltig" markiert.

ngIRCd 0.5.2, 04.10.2002

  - Buffer Overflow in Read_Resolver_Result() behoben.